# Break-Out-Game

./: CMakeLists.txt
apps/: CMakeLists.txt
apps/break_out/: CMakeLists.txt  program.cpp
apps/break_out/shaders/: sprite.vs
libs/: CMakeLists.txt
libs/game/include/: ball_object.h  ball_object_collisions.h  game.h  game_level.h  game_object.h  sprite_renderer.h
libs/game/src/: CMakeLists.txt  ball_object.cpp  ball_object_collisions.cpp  game.cpp  game_level.cpp  sprite_renderer.cpp
libs/vis/include/: resource_manager.h  shader.h
libs/vis/src/: CMakeLists.txt
